syntax = "proto3";

package calculator;

option go_package = "github.com/KevenMarioN/grpc-go-course/calculator/proto";

message SumRequest {
    int64 first_number = 1;
    int64 second_number = 2;
}

message SumResponse {
    int64 result = 1;
}
